# Menu_Runner

./: Cargo.toml  README.md  cargocheck  config.txt  menu.txt  script.sh
configs/: .menu_config_color.yaml.swp  future_menu.json  future_menu.txt  menu.txt  menu_config.yaml  menu_config_color.yaml
configs/sav/: future_menu_config.yaml  menu_config.json  menu_config.yaml
core/: Cargo.toml  menu_runner
core/src/: main.rs
doc/: CopilotDefaultInstructions.md  copilot_behavior_rules  file_structure.txt  fs_workspace_improvements.txt  important.md  rust-specific.md
doc/codesamples/: buttontracker.md  regexStringChopper.md  uttonStateTracker;.rs
maintance/: .create_menu_txt.sh.swp  README.md  cargo_logger  create_future_menu_json.sh  create_future_menu_txt.sh  create_menu_txt.sh  futrure_menu.json  future_create_menu_txt.sh  pushit
maybe-use-later/: a
menu_core/: Cargo.toml
menu_core/src/: .parser_async.rs.swp  lib.rs  models.rs  parser.rs  parser_async.rs
sav/doc/: #Code Citations.md  CopilotDefaultInstructions.md  Gui_Config_Improvements.html  Gui_Config_Improvements.md  MicroImprovemtns_plan.md
scripts/: words.txt
scripts/config/: create_menu_yaml.sh
src/: main.rs  main_async.rs
src/x/: main.rs
tests/: Cargo.toml  regcchopper.rs
ui/: main.slint
