[package]
name = "Menu_Runner_menu"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "menu_core"
]

[[bin]]
name = "Menu_Runner_menu"
path = "src/main_async.rs"

[dependencies]
slint = "1.10.0"
tokio = { version = "1.44.2", features = ["full"] }
Menu_Runner_core = { path = "./menu_core" }
serde_json = "1.0"  # For parsing JSON menu files
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"  # Added YAML support

[build-dependencies]
slint-build = "1.10.0"
