[package]
name = "menu_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
# For regex pattern matching
regex = "1.9.5"

# For UI with Slint
slint = "1.1.0"

# For async functionality
tokio = { version = "1.32.0", features = ["full"] }

# For YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Other utilities
once_cell = "1.18.0"
futures = "0.3"

[[bin]]
name = "regex_test"
path = "src/regex_test.rs"
